--- a/VRChat/76/1259776.html
+++ b/VRChat/76/1259776.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/ae2c55d2ea0ba54025f6.js" defer=
+    "https://asset.booth.pm/assets/14f10d23ffa1b8daf619.js" defer=
     "defer" nonce=
-    "B3E4PPQ0bg5mYJeLcrCy8imhXdA+2GZeXfTR0X2dfYw="></script>
+    "0XzhECjdlbw8c//8oOjSmyvUbS4N/NP0c8zV6DbpQwE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRアバター向け】プチけもみみ娘「巫女きつねみみ娘」","description":"デフォルメされた、けもみみ娘のアバターです。\n大きさは小さめです。\n\nこの娘を含んだ６体セットもあります。\nhttps://zouzu.booth.pm/items/1259778","url":"https://booth.pm/ja/items/1259776","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/eebc431e-9433-4f38-aaf9-669c8659dedf/i/1259776/d1a51e09-98dc-44f7-bba5-c5b004d4d1d7_base_resized.jpg"}
     </script>
@@ -637,7 +637,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;}]"
+    "[{&quot;label&quot;:&quot;SC2023 Autumn&quot;,&quot;value&quot;:&quot;sc2023autumn&quot;},{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
