--- a/VRChat/68/1259468.html
+++ b/VRChat/68/1259468.html
@@ -77,9 +77,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/ae2c55d2ea0ba54025f6.js" defer=
+    "https://asset.booth.pm/assets/14f10d23ffa1b8daf619.js" defer=
     "defer" nonce=
-    "cqHxG2B5QYZwxBMT6BApff9VsK+XE6gx84qJWaat7dg="></script>
+    "NzQWDdO9QRAg3A0peeNply/imZNsTmMR0T537NtsJ5c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"パンのやつ","description":"パンの袋のあれです\n\n元ファイルをそのまま販売することのみ禁止します．\n\n改変その他ご自由にお使いください．\n\n使用により起こった事象について作者は責任を負いません．","url":"https://booth.pm/ja/items/1259468","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/7feb03e9-a642-4ed6-b66d-d6b85ca592af/i/1259468/ae0f1ff0-3ee5-4ac9-87ef-6f006258f58b_base_resized.jpg"}
     </script>
@@ -463,7 +463,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;}]"
+    "[{&quot;label&quot;:&quot;SC2023 Autumn&quot;,&quot;value&quot;:&quot;sc2023autumn&quot;},{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
